[package]
name = "statsrelay"
version = "3.0.1"
authors = ["Yann Ramin <github@theatr.us>"]
edition = "2018"

[[bin]]
name = "statsrelay"
path = "src/cmd/statsrelay.rs"

[[bin]]
name = "sr-loadgen"
path = "src/cmd/loadgen.rs"

[[bench]]
name = "statsd_benchmark"
harness = false


[dependencies]
murmur3 = "0.5"
tokio = { version = "0.3", features = ["full", "parking_lot"] }
futures = "0.3"
hyper = "0.13"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qp-trie = "0.7"
anyhow = "1.0"
thiserror = "1.0"
memchr = "2"
stream-cancel = "0.7"
crossbeam = "0.8"
crossbeam-utils = "0.8"
bytes = "0.6"
parking_lot = "0.11"
regex = "1"
chrono = "0.4"

log = "0.4"
env_logger = "0.8"

[dev-dependencies]
tempfile = "3.1"
criterion = "0.3"

[build-dependencies]
built = { version = "0.4", features = ["git2"] }
