[package]
name = "statsrelay"
version = "3.1.0"
authors = ["Yann Ramin <github@theatr.us>"]
edition = "2018"
description = "Swiss army knife for aggregation, filtering, relaying, sharding of statsd, prometheus, and other metrics systems"
license = "MIT"
keywords = ["statsd", "metrics", "aggregation"]
categories = ["development-tools"]
repository = "https://github.com/lyft/statsrelay"

[[bin]]
name = "statsrelay"
path = "src/cmd/statsrelay.rs"

[[bin]]
name = "sr-loadgen"
path = "src/cmd/loadgen.rs"

[dependencies]
murmur3 = "0.5"
tokio = { version = "1", features = ["full", "parking_lot"] }
futures = "0.3"
hyper = "0.14"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
qp-trie = "0.7"
anyhow = "1.0"
thiserror = "1.0"
memchr = "2"
stream-cancel = "0.8"
crossbeam = "0.8"
crossbeam-utils = "0.8"
bytes = "1"
parking_lot = "0.11"
regex = "1"
chrono = "0.4"
statsdproto = "0.1"

log = "0.4"
env_logger = "0.8"

[dev-dependencies]
tempfile = "3.1"

[build-dependencies]
built = { version = "0.4", features = ["git2"] }
